# csvreader

./: CMakeLists.txt  LICENSE  README.md
examples/: example.csv  example.json
include/: csv.h  tools.h
libs/nlohmann/: adl_serializer.hpp  byte_container_with_subtype.hpp  json.hpp  json_fwd.hpp  ordered_map.hpp
libs/nlohmann/detail/: exceptions.hpp  hash.hpp  json_custom_base_class.hpp  json_pointer.hpp  json_ref.hpp  macro_scope.hpp  macro_unscope.hpp  string_concat.hpp  string_escape.hpp  value_t.hpp
libs/nlohmann/detail/conversions/: from_json.hpp  to_chars.hpp  to_json.hpp
libs/nlohmann/detail/input/: binary_reader.hpp  input_adapters.hpp  json_sax.hpp  lexer.hpp  parser.hpp  position_t.hpp
libs/nlohmann/detail/iterators/: internal_iterator.hpp  iter_impl.hpp  iteration_proxy.hpp  iterator_traits.hpp  json_reverse_iterator.hpp  primitive_iterator.hpp
libs/nlohmann/detail/meta/: cpp_future.hpp  detected.hpp  identity_tag.hpp  is_sax.hpp  std_fs.hpp  type_traits.hpp  void_t.hpp
libs/nlohmann/detail/meta/call_std/: begin.hpp  end.hpp
libs/nlohmann/detail/output/: binary_writer.hpp  output_adapters.hpp  serializer.hpp
src/: csv.cpp  main.cpp  tools.cpp
